# air_quality

./: 0_data_cleaning.ipynb  1_eda_exploration.ipynb  2_eda_correlations.ipynb  3_feature_engineering.ipynb  3_feature_engineering_and_model_prep.ipynb  4_cluster_analyis.ipynb  4_clusteranalyis.ipynb  5_classification.ipynb  5_classification_Kopie.ipynb  5_classification_models.ipynb  6_time_series.ipynb  7_linear_regression_PM25_weather.ipynb  7_streamlit_dashboard.ipynb  Clusteranalyse.ipynb  Clusteranalyse_big.ipynb  Create_and_clean_df.ipynb  Datenwörterbuch.md  EDA.ipynb  EDA_air_quality.ipynb  EDA_large.ipynb  Geodaten.ipynb  Glossar.md  MareikeWORK.ipynb  MiniEDA.ipynb  README.md  README_old.md  WiebkeWORK.ipynb  air_quality_notes.ipynb  app.py  city_per_country.csv  create_plots.py  dataHowTo.ipynb  data_clean_and_combine.py  data_combine_clean.py  data_dictionary.md  data_preparation.py  df_geodata.csv  main.py  notes.ipynb  pop_WORK.ipynb  (+8 more)
Präsentationen/: air_quality.pptx  ~$Minimalistische Präsentation.pptx
WORK/: Ashdod_and_Netanya.ipynb  Ashkelon.ipynb  Clusteranalyse.ipynb  Clusteranalyse_Schadstoffe.ipynb  Clusteranalyse_Schadstoffe_und_Wetter.ipynb  Clusteranalyse_big.ipynb  Clusteranalyse_mit_Wetter.ipynb  Co_per_month.ipynb  Create_and_clean_df.ipynb  Geodaten.ipynb  Geodaten_test.ipynb  MAREIKE_Krimskrams.py  MareikeWORK.ipynb  Minimalistische Präsentation.pptx  WiebkeWORK.ipynb  Windrosen.ipynb  air_quality_Wiebke (1).pptx  air_quality_Wiebke.pptx  alt_README.md  cluster_zuordnung.csv  data_how_to.ipynb  data_preparation_04_03_25.py  df_cluster.csv  (+5 more)
