[project]
name = "air-quality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "meteostat>=1.6.8",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]
